[gd_scene load_steps=3 format=3 uid="uid://d2twfd108xa25"]

[ext_resource type="Texture2D" uid="uid://dao6tur20kh41" path="res://icon.svg" id="1_6eabv"]
[ext_resource type="Script" path="res://scenes/menu/menu_ui_layer.gd" id="1_34oex"]

[node name="MenuUILayer" type="CanvasLayer"]
script = ExtResource("1_34oex")

[node name="MainMenu" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -283.0
offset_top = -155.5
offset_right = -155.0
offset_bottom = 155.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 50

[node name="Logo" type="TextureRect" parent="MainMenu"]
layout_mode = 2
texture = ExtResource("1_6eabv")

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="NewGameButton" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
text = "New Game"

[node name="ControlsButton" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
text = "Controls"

[node name="ExitButton" type="Button" parent="MainMenu/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
text = "Exit"
